# protobuf_static_link_test

./: CMakeLists.txt  README.md  main.cpp  simple_protocol.pb.cc  simple_protocol.pb.h  simple_protocol.proto
